# alien_battle_simulation

./: CMakeLists.txt  README.md
header/: Boov.h  Competitor.h  Gorg.h
source/: Boov.cpp  Competitor.cpp  Gorg.cpp  Source.cpp
